todoapi/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: todoapi
  labels:
    name: todo-api
