todoapi/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-rest
  labels:
    app: todo-rest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-rest
  template:
    metadata:
      labels:
        app: todo-rest
    spec:
      containers:
        - name: todo-rest-container
          imagePullPolicy: Always
          image: endofcake/go-todo-rest-api-example:latest
          ports:
          - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
