todoapi/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgresdb
          imagePullPolicy: Always
          image: postgres:11.15
          ports:
          - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
