todoapi/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresdb
  labels:
    app: db
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app: db-sts
  volumeClaimTemplates:
  - metadata:
      name: db-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "hostpath"
      resources:
        requests:
          storage: 8Gi
  template:
    metadata:
      labels:
        app: db-sts
    spec:
      containers:
        - name: postgresdb
          imagePullPolicy: Always
          image: postgres:11.15
          ports:
          - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-pvc
              subPath: data
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
