todoapi/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    app: todo-rest
spec:
  type: LoadBalancer
  selector:
    app: todo-rest
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
